fix:center align description text

--- a/src/components/ProjectContent/ProjectContent.css
+++ b/src/components/ProjectContent/ProjectContent.css
@@ -21,6 +21,7 @@
 .project-container .top-content .project-briefing {
     font-size: 1.8rem;
     line-height: 1.6;
+    text-align: center;
 }
 
 
